# controller/post_consult_services/handler/routes.go
@@ -6,8 +6,11 @@ import (
 )
 
 func RegisterPostConsultRoutes(rg *gin.RouterGroup, db *sqlx.DB) {
-	// eg := rg.Group("/post-consult")
-	// {
-			
-	// }
+	eg := rg.Group("/post-consult")
+	{
+		eg.POST("", createNewPostMarketHandler(db))
+		eg.PUT("/:post_id", updatePostMarketHandler(db))
+		eg.GET("", getPostConsultHandler(db))
+		eg.GET("/user/:user_id", getMyPostConsultHandler(db))
+	}
 }
