# controller/post_consult_services/model/update.consult.model.go
@@ -1,0 +1,7 @@
+package consultmodel
+
+type ModelUpdateConsult struct {
+	PostID  string `db:"post_id" json:"-"`
+	Title   string `db:"title" json:"title"`
+	Content string `db:"content" json:"content"`
+}
